--- a/css/styles.css
+++ b/css/styles.css
@@ -3209,6 +3209,7 @@ img.u-pull-left {
     position        : absolute;
     bottom          : 4.8rem;
     right           : 5.8rem;
+    z-index: 2;
 }
 
 .intro-scrolldown svg {
@@ -3927,10 +3928,17 @@ img.u-pull-left {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
+
+    transition: all 300ms;
+    filter: brightness(85%);
 }
 
 .soft-skill-slider__slide:hover .soft-skill-slider__skill {
     color : var(--color-1);
+}
+
+.soft-skill-slider__slide:hover{
+    filter: brightness(100%);
 }
 
 .soft-skill-slider__slide:hover .soft-skill-slider__skill-description {
@@ -3951,6 +3959,7 @@ img.u-pull-left {
 .soft-skill-slider__skill{
     height: 25%;
     color: white;
+    text-transform: uppercase;
 
     transition: all 300ms;
 }
@@ -3958,6 +3967,7 @@ img.u-pull-left {
 .soft-skill-slider__skill-description{
     color: var(--color-text-light);
     transition: all 250ms;
+    text-transform: none;
 }
 
 /* ------------------------------------------------------------------- 
